force-app/main/default/objects/Projects__c/fields/ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>ProjectTitle__c</fullName>
    <label>Project Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>