force-app/main/default/objects/Projects__c/validationRules/Validation_Rule_Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_Change_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>If you are not a admin, you cant change the status</errorMessage>
</ValidationRule>