force-app/main/default/objects/Projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectTitle__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>