force-app/main/default/objects/Projects__c/listViews/Completed_Projects.listView-meta.xml
<ListView>
    <fullName>Completed_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Completed Projects</label>
</ListView>