force-app/main/default/objects/Projects__c/listViews/New_Projects.listView-meta.xml
<ListView>
    <fullName>New_Projects</fullName>
    <columns>NAME</columns>
    <columns>ProjectTitle__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>New Projects</label>
</ListView>