force-app/main/default/objects/Projects__c/listViews/On_going_Projects.listView-meta.xml
<ListView>
    <fullName>On_going_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>On going Projects</label>
</ListView>